--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -45,3 +45,4 @@ $greyish-brown-five: #505050;
 $medium-pink: #f03690;
 $lavender-pink: #c86dd7;
 $warm-grey-eight-two: #9b9b9b;
+$greyish-brown-six: #4a4a4a;
