--- a/src/components/ImageFade/imageFade.scss
+++ b/src/components/ImageFade/imageFade.scss
@@ -8,28 +8,29 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  @include tablet {
-    // height: 71rem;
-    // width: 56vw;
-    // height: 47vw;
-  }
+  
 
   .homeImage {
     animation-duration: 3s;
     animation-iteration-count: infinite;
     transition: all 1.8s ease;
-    width: 80%;
+    width: 100%;
     height: 90vw;
     @include tablet {
-      // height: 71rem;
       height: 44vw;
-      // width: 56vw;
       width: 100%;
     }
 
+    &:before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      @include height(500);
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $black);
+    }
   }
-  // margin-bottom: 7rem;
-
 }
 @keyframes examle {
   0% {
