--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -69,6 +69,7 @@
   box-shadow: 0 3px 6px 0 $black-16;
   padding: 1.6875rem 5.25rem 1.6875rem 2.25rem;
   border-radius: 0 5px 5px 0;
+  flex-grow: 0 !important;
   @include tablet {
     height: 100%;
     position: relative;
