--- a/src/modals/forgotPasswordModal/forgotPasswordModal.scss
+++ b/src/modals/forgotPasswordModal/forgotPasswordModal.scss
@@ -7,17 +7,17 @@
   @include width(490);
 }
 
-.genericContainer {
-  @include width(550);
-  border: 1px solid $primary-color;
+.forgot-password {
+  background-color: white;
+  @include padding(40, 50);
+  text-align: center;
+  @include borderRadius(5);
+  
 }
 
-
-.forgot-password {
-    background-color: white;
-    @include padding(40, 50);
-    text-align: center;
-    @include borderRadius(5);
+.generic-popup {
+  @extend .forgot-password;
+  border: 1px solid $primary-color;
 }
 
 .header {
