--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -58,11 +58,21 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: flex-start;
+  align-items: center;
   padding: 0 calc(7.5% + 15px) 2rem;
 
-  h1 {
+  > h1 {
+    font-family: $frank-medium;
     letter-spacing: 1px;
+    font-size: 25px;
+    @include tablet {
+      font-size: 4.285rem;
+    }
+  }
+
+  > p {
+    font-size: 25px;
+    text-align: center;
   }
 }
 
