talk to modal ui fix

--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -55,3 +55,9 @@
   font-size: 1rem !important;
   font-family: $roboto-regular !important;
 }
+.phone {
+  margin-top: 2rem;
+  a {
+    font-family: $roboto-medium;
+  }
+}
