178-clicks-permitted fix

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -85,9 +85,9 @@
       @include flex();
       @include align-center();
       position: relative;
-      cursor: pointer;
 
       a {
+        cursor: pointer;
         @include mobile {
           line-height: 2.36;
           font-size: 18px;
@@ -180,6 +180,10 @@
       @include height(30);
     }
   }
+}
+
+.icon-link {
+  padding: 0 !important;
 }
 
 .categoriesList {
