ui fixes in home page

--- a/src/components/HorizontalSlider/horizontalSlider.scss
+++ b/src/components/HorizontalSlider/horizontalSlider.scss
@@ -98,6 +98,9 @@
   height: 10VW;
   border-radius: 15px;
   background-size: cover;
+  @include mobile {
+    height: 41vw;
+  }
 
 }
 .packageImg {
