header ui fixes

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -27,7 +27,7 @@
     justify-content: space-between !important;
     padding: 0 10%;
     @include mobile {
-      height: 5rem;
+      height: 73px;
       padding: 0 5%;
 
     }
