--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -110,7 +110,7 @@
 .fullWidthListing {
   @include mobile {
     border: 1px solid rgba(0, 0, 0, 0.16);
-    margin-left: -30px;
+    // margin-left: -30px;
     padding: 0 10px;
   }
 }
