--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -526,9 +526,10 @@ a.button {
 // mobile specific - plaincard
 
 .plainCardContainer {
-  min-width: 41%;
-  width: 41%;
+  // min-width: 41%;
+  width: 62%;
   margin-right: 1.2rem;
+  flex-shrink: 0;
 }
 
 .homeContent {
