--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -114,7 +114,7 @@ h2 {
   }
 
   &.home-btn {
-    width: 15rem;
+    min-width: 15rem;
     display: flex;
     justify-content: center;
   }
@@ -195,4 +195,20 @@ textarea {
     align-items: center !important;
   }
   align-items: flex-start !important;
+}
+
+.input-box {
+  border-radius: 0;
+}
+
+.slick-slider {
+  @include mobile {
+    .slick-next {
+      right: 0;
+    }
+
+    .slick-prev {
+      left: 0;
+    }
+  }
 }
