--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -526,8 +526,13 @@ a.button {
 // mobile specific - plaincard
 
 .plainCardContainer {
-  // min-width: 41%;
   width: 62%;
+  margin-right: 1.2rem;
+  flex-shrink: 0;
+}
+
+.plainCardTwo {
+  width: 36%;
   margin-right: 1.2rem;
   flex-shrink: 0;
 }
