217-mobile-view-testimonial-box-is-changing-sizes

--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -939,6 +939,7 @@ h1.homeTitle {
   @include mobile {
     text-align: center;
     padding: 2rem 0;
+    height: 24rem;
 
   }
   @include tabletOnly {}
