--- a/src/components/HorizontalSlider/horizontalSlider.scss
+++ b/src/components/HorizontalSlider/horizontalSlider.scss
@@ -75,6 +75,7 @@
   background-color: $white;
   cursor: pointer;
   transition: all .7s ease;
+  margin-bottom: .5rem;
 
   h3 {
     font-family: $roboto-medium;
