menu position updated

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2785,4 +2785,10 @@ button {
 }
 .navbar-brand {
   padding:  0 !important;
+  @include mobile {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
 }
