--- a/src/modules/detailPage/detailPageComponent.scss
+++ b/src/modules/detailPage/detailPageComponent.scss
@@ -52,9 +52,16 @@
     }
   }
 
-  a {
+  span {
     color: $warm-grey;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+      font-weight: bold;
+    }
   }
+
   @include tablet {
      @include height(160);
     flex-direction: row;
@@ -111,6 +118,7 @@
       @include letterSpacing(.4);
       position: relative;
       white-space: nowrap;
+      cursor: pointer;
 
       &:before {
         content: '|';
@@ -134,6 +142,10 @@
           content: '';
         }
       }
+    }
+
+    .selectedItem {
+      color: $primary-color;
     }
 
   }
