--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -54,6 +54,7 @@
 .footer-link {
   font-size: 1rem !important;
   font-family: $roboto-regular !important;
+  text-decoration: none !important;
 }
 .phone {
   margin-top: 2rem;
