--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -1117,6 +1117,7 @@ h1.homeTitle {
   @include mobile {
     flex-direction: row;
     padding: 1rem 0;
+    align-items: center;
   }
   padding: 4.2rem;
   display: flex;
