heart icon login implemented, formating money removed

--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -37,8 +37,7 @@
 .apiError {
   @include fontSize(16);
   color: $bright-red;
-  position: absolute;
-  top: 7.5rem;
+  bottom: 1.5rem;
 
   &::first-letter {
     text-transform: capitalize;
