--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -63,9 +63,9 @@ h2 {
 
 .main {
   min-height: calc(100vh - 40rem);
-  margin-top: calc(50px + 6.6875rem);
+  margin-top: calc(48px + 8.1rem);
   @include mobile {
-    margin-top: 4.9375rem;
+    margin-top: 73px;
   }
 }
 
