Price on request, verification success popup icon

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -124,6 +124,11 @@ h2 {
   background-color: grey;
 }
 
+.primary-button-disabled {
+  @extend .primary-button;
+  opacity: 0.5;
+}
+
 .text-btn {
   color: $primary-color;
   font-family: $roboto-medium;
