--- a/src/modals/productGallery/galleryModal.scss
+++ b/src/modals/productGallery/galleryModal.scss
@@ -7,8 +7,36 @@
     align-items: center;
     justify-content: space-between;
     color: white;
+
+    @include mobile {
+        margin-top: 2rem;
+    }
 }
 
 .larger {
     @include fontSize(30);
+
+    @include mobile {
+        @include fontSize(20);
+    }
+}
+
+.mobileGalleryImages {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 2rem;
+    display: none;
+    max-height: 80vh;
+    overflow: auto;
+
+    @include mobile {
+        display: flex;    
+    }
+
+    img {
+        width: 90%;
+        height: auto;
+        margin: 1rem 0;
+    }
 }
