--- a/src/modules/packages/Gold/goldPackage.scss
+++ b/src/modules/packages/Gold/goldPackage.scss
@@ -338,6 +338,10 @@
     color: $white;
     text-align: left;
     font-size: 2.28rem;
+    @include mobile {
+      margin-top: 1rem;
+      text-align: center;
+    }
   }
 
   form {
